# sun2

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml  doxygen.yml  pi-hardware-tests.yml  release.yml
demo/: CMakeLists.txt  README.md  main.cpp
diagrams/mechanical model/: mechanical.md
diagrams/mechanical model/3rrs/: 3230 Servo Motor.SLDPRT  Double-axis narrow U bracket.SLDPRT  Double-axis wide U bracket.SLDPRT  Dual-axis servo.SLDASM  I M6.SLDPRT  Imaginary axis steering wheel.SLDPRT  L1 arm.SLDPRT  L2 arm.SLDPRT  Raspberry Pi box sketch version.SLDPRT  Real-axis steering wheel.SLDPRT  The motion platform above.SLDPRT  The static platform below.SLDPRT  ball head neck.SLDPRT  ball head.SLDPRT  di.SLDASM  sc-16-yp.SLDPRT
docs/: BOM.md  DEPENDENCIES.md  REPRODUCIBILITY.md  build_and_run.md  hardware_connections.md  latency_measurement.md  project_overview.md  realtime_analysis.md  requirements.md  solid_justification.md  state_machine.md  system_architecture.md  testing.md  user_stories_use_cases.md
scripts/: build_core.sh  build_docs.sh  build_pi_debug.sh  package_release.sh  run_latency.sh  test_core.sh  test_pi_hw.sh
src/: main.cpp
src/actuators/: ActuatorManager.cpp  ActuatorManager.hpp  CMakeLists.txt  PCA9685.cpp  PCA9685.hpp  ServoDriver.cpp  ServoDriver.hpp
src/actuators/tests/: CMakeLists.txt  test_actuatormanager.cpp  test_pca9685.cpp  test_servodriver.cpp
src/app/: AppConfig.cpp  AppConfig.hpp  Application.cpp  Application.hpp  CMakeLists.txt  CliController.cpp  CliController.hpp  LinuxEventLoop.cpp  LinuxEventLoop.hpp  SystemFactory.cpp  SystemFactory.hpp
src/common/: CMakeLists.txt  LatencyMonitor.cpp  LatencyMonitor.hpp  Logger.cpp  Logger.hpp  ManualInputTypes.hpp  ThreadSafeQueue.hpp  Types.hpp
src/common/tests/: CMakeLists.txt  test_latency_monitor.cpp  test_threadsafequeue.cpp
src/control/: CMakeLists.txt  Controller.cpp  Controller.hpp  ImuFeedbackMapper.cpp  ImuFeedbackMapper.hpp  ImuTiltEstimator.cpp  ImuTiltEstimator.hpp  Kinematics3RRS.cpp  Kinematics3RRS.hpp  ManualImuCoordinator.cpp  ManualImuCoordinator.hpp  ManualInputMapper.cpp  ManualInputMapper.hpp
src/control/tests/: CMakeLists.txt  test_controller.cpp  test_imu_feedback_mapper.cpp  test_imu_tilt_estimator.cpp  test_kinematics.cpp  test_manual_input_mapper.cpp
src/hal/: CMakeLists.txt  I2CBusPath.hpp  II2CDevice.hpp  LinuxI2CDevice.cpp  LinuxI2CDevice.hpp
src/hal/tests/: CMakeLists.txt  test_linux_i2c_hw.cpp
src/qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main_qt.cpp
src/sensors/: CMakeLists.txt  ICamera.hpp  LibcameraPublisher.cpp  LibcameraPublisher.hpp  SimulatedPublisher.cpp  SimulatedPublisher.hpp
src/sensors/imu/: IIMU.hpp  Mpu6050Publisher.cpp  Mpu6050Publisher.hpp
src/sensors/manual/: ADS1115ManualInput.cpp  ADS1115ManualInput.hpp
src/sensors/tests/: CMakeLists.txt  test_mpu6050_publisher.cpp
src/system/: BackendCoordinator.cpp  BackendCoordinator.hpp  CMakeLists.txt  GuiManualDispatcher.cpp  GuiManualDispatcher.hpp  SystemManager.cpp  SystemManager.hpp  TrackerState.hpp
src/system/tests/: CMakeLists.txt  test_systemmanager_imu_shadow.cpp  test_systemmanager_statemachine.cpp
src/tests/support/: FakeI2CDevice.hpp  test_common.hpp  test_main.cpp
src/vision/: CMakeLists.txt  SunTracker.cpp  SunTracker.hpp
src/vision/tests/: CMakeLists.txt  test_suntracker.cpp
