set(SOLAR_TEST_SUPPORT_DIR ${CMAKE_SOURCE_DIR}/src/tests/support)

add_executable(test_control
    ${SOLAR_TEST_SUPPORT_DIR}/test_main.cpp
    test_controller.cpp
    test_kinematics.cpp
    test_manual_input_mapper.cpp
    test_imu_feedback_mapper.cpp
    test_imu_tilt_estimator.cpp
)

target_include_directories(test_control PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}
)

target_link_libraries(test_control PRIVATE solar_control)
solar_enable_coverage(test_control)

add_test(NAME Controller_LowConfidence_NoMotion COMMAND test_control --run Controller_LowConfidence_NoMotion)
add_test(NAME Controller_WithinDeadband_NoMotion COMMAND test_control --run Controller_WithinDeadband_NoMotion)
add_test(NAME Controller_OutsideDeadband_ProducesMotion COMMAND test_control --run Controller_OutsideDeadband_ProducesMotion)
add_test(NAME Controller_OutputClamped COMMAND test_control --run Controller_OutputClamped)

add_test(NAME Kinematics3RRS_outputs_in_range_for_moderate_setpoint COMMAND test_control --run Kinematics3RRS_outputs_in_range_for_moderate_setpoint)
add_test(NAME Kinematics3RRS_neutral_setpoint_produces_near_neutral_angles COMMAND test_control --run Kinematics3RRS_neutral_setpoint_produces_near_neutral_angles)
add_test(NAME Kinematics3RRS_frame_id_forwarded_through_callback COMMAND test_control --run Kinematics3RRS_frame_id_forwarded_through_callback)
add_test(NAME Kinematics3RRS_small_setpoint_changes_produce_small_output_changes COMMAND test_control --run Kinematics3RRS_small_setpoint_changes_produce_small_output_changes)
add_test(NAME Kinematics3RRS_zero_setpoint_after_valid_does_not_trigger_fallback COMMAND test_control --run Kinematics3RRS_zero_setpoint_after_valid_does_not_trigger_fallback)
add_test(NAME Kinematics3RRS_large_reachable_setpoint_stays_in_range COMMAND test_control --run Kinematics3RRS_large_reachable_setpoint_stays_in_range)
add_test(NAME Kinematics3RRS_invalid_geometry_surfaces_error_status COMMAND test_control --run Kinematics3RRS_invalid_geometry_surfaces_error_status)
add_test(NAME Kinematics3RRS_first_invalid_then_second_invalid_stays_in_range COMMAND test_control --run Kinematics3RRS_first_invalid_then_second_invalid_stays_in_range)
add_test(NAME Kinematics3RRS_good_then_bad_geometry_falls_back_to_last_valid COMMAND test_control --run Kinematics3RRS_good_then_bad_geometry_falls_back_to_last_valid)

add_test(NAME ManualInputMapper_CentreVoltage_MapsToZeroCommand COMMAND test_control --run ManualInputMapper_CentreVoltage_MapsToZeroCommand)
add_test(NAME ManualInputMapper_LowAndHighVoltages_MapToMinusAndPlusOne COMMAND test_control --run ManualInputMapper_LowAndHighVoltages_MapToMinusAndPlusOne)
add_test(NAME ManualInputMapper_InversionFlags_FlipDirections COMMAND test_control --run ManualInputMapper_InversionFlags_FlipDirections)
add_test(NAME ManualInputMapper_Deadband_ZerosSmallInputsAndRescalesBeyondDeadband COMMAND test_control --run ManualInputMapper_Deadband_ZerosSmallInputsAndRescalesBeyondDeadband)
add_test(NAME ManualInputMapper_OutOfRangeVoltages_AreClampedSafely COMMAND test_control --run ManualInputMapper_OutOfRangeVoltages_AreClampedSafely)

add_test(NAME ImuFeedbackMapper_ZeroTilt_ProducesZeroCorrection COMMAND test_control --run ImuFeedbackMapper_ZeroTilt_ProducesZeroCorrection)
add_test(NAME ImuFeedbackMapper_PositiveTilt_ProducesNegativeCorrection COMMAND test_control --run ImuFeedbackMapper_PositiveTilt_ProducesNegativeCorrection)
add_test(NAME ImuFeedbackMapper_NegativeTilt_ProducesPositiveCorrection COMMAND test_control --run ImuFeedbackMapper_NegativeTilt_ProducesPositiveCorrection)
add_test(NAME ImuFeedbackMapper_RuntimeGainChange_TakesEffectImmediately COMMAND test_control --run ImuFeedbackMapper_RuntimeGainChange_TakesEffectImmediately)

add_test(NAME ImuTiltEstimator_InvalidSample_ReturnsZero COMMAND test_control --run ImuTiltEstimator_InvalidSample_ReturnsZero)
add_test(NAME ImuTiltEstimator_LevelGravity_ReturnsZeroTilt COMMAND test_control --run ImuTiltEstimator_LevelGravity_ReturnsZeroTilt)
add_test(NAME ImuTiltEstimator_PositiveAx_WithGravity_ReturnsPositiveTilt COMMAND test_control --run ImuTiltEstimator_PositiveAx_WithGravity_ReturnsPositiveTilt)
add_test(NAME ImuTiltEstimator_NegativeAx_WithGravity_ReturnsNegativeTilt COMMAND test_control --run ImuTiltEstimator_NegativeAx_WithGravity_ReturnsNegativeTilt)
add_test(NAME ImuTiltEstimator_DegenerateDenominator_ReturnsZero COMMAND test_control --run ImuTiltEstimator_DegenerateDenominator_ReturnsZero)
